# rules_kotlin

examples/trivial/: .bazelrc  BUILD.bazel  WORKSPACE  repro.py
examples/trivial/app/: BUILD.bazel  app.kt
examples/trivial/lib/: BUILD.bazel  Models.kt
src/main/kotlin/io/bazel/kotlin/builder/toolchain/: KotlinToolchain.kt
