load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain", "kt_javac_options", "kt_kotlinc_options")

kt_kotlinc_options(
    name = "kotlinc_options",
)

kt_javac_options(
    name = "javac_options",
)

define_kt_toolchain(
    name = "toolchain",
    api_version = "1.4",
    experimental_multiplex_workers = False,
    experimental_use_abi_jars = False,
    javac_options = ":javac_options",
    jvm_target = "1.8",
    kotlinc_options = ":kotlinc_options",
    language_version = "1.4",
)
