load("@rules_java//java:defs.bzl", "java_binary")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "ktlint_fix", "ktlint_test")

kt_jvm_library(
    name = "app",
    srcs = ["App.kt"],
    deps = ["//lib"],
)

java_binary(
    name = "myapp",
    main_class = "app.AppKt",
    runtime_deps = [":app"],
)
